<?xml version="1.0"?>
<package>
  <name>uav_controller</name>
  <version>0.0.0</version>
  <description>The uav_controller package</description>


  <maintainer email="davide.rebora@gmail.com">davide</maintainer>
  <maintainer email="macchiusiluca@gmail.com">luca</maintainer>


  <url type="website">http://github.com/RGBDslam-joystick/UAV_controller.git</url> 


  <author email="davide.rebora@gmail.com">davide</author>
  <author email="macchiusiluca@gmail.com">luca</author>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
